--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="custom.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&family=Roboto&display=swap" rel="stylesheet">
     <title>Random Quote Generator</title>
 </head>
+
+
 <body>
+
+    <div class="white-box"></div>
+    <div class="container">
+
+        <h5>The secret of success is constancy to purpose.</h5>
+
+        <h2>Benjamin Disraeli</h2>
+
+        <button>Get Quote</button>
+
+
+    </div>
     
 </body>
 </html>
