Got data from the api

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div class="white-box"></div>
     <div class="container">
 
-        <h5>The secret of success is constancy to purpose.</h5>
+        <h5 id="quote">The secret of success is constancy to purpose.</h5>
 
-        <h2>Benjamin Disraeli</h2>
+        <h2 id="author">Benjamin Disraeli</h2>
 
-        <button>Get Quote</button>
+        <button onclick="generateRandomQ()">Get Quote</button>
 
 
     </div>
-    
+    <script src="main.js"></script>
 </body>
 </html>
